## [LiteLoader Release Note]
This is a bug fix update.Please update as soon as possible!

## [Changes]
- Remove MCVAPI

## [Bug Fixes]
- Fix BDS thorns crash
- Fix LLSE en.isPlayer alway return false
- Fix LLSE en.toPlayer error
- Fix LLSE sp.simulateWorldMove
- Fix LLSE sp.simulateLocalMove
- Fix LLMoney command crash