@@ -6,6 +6,7 @@ This is a bug fix update.Please update as soon as possible!
 
 ## [Bug Fixes]
 - Fix BDS thorns crash
+- Fix SimulatedPlayer::simulateDestory
 - Fix LLSE en.isPlayer alway return false
 - Fix LLSE en.toPlayer error
 - Fix LLSE sp.simulateWorldMove
